revert back to using URL because Path doesn't work with jar-archives